# py-prdanlz

./: .gitignore  Develop.md  LICENSE  Library.md  Makefile  README.md  SysctlTypes.md  TODO.md  prdanlz.json  requirements.txt  setup.cfg
examples/: battery.json  battery.md  cpu_load.json  cpu_load.md  last_pid.json  last_pid.md  loadavg.json  swap_usage.json  swap_usage.md
ports/: Makefile  distinfo  pkg-descr
src/prdanlz/: __init__.py  __main__.py  incident.py  monitor.py  variable.py
src/prdanlz/libc/: libc.py  sysctl.py  tconv.py
tests/: __init__.py  fixture_sysctl.py  test_format.py  test_freebsd_sysctl.py  test_incident.py  test_main.py  test_monitor.py  test_sysctl.py  test_variable.py
tests/libc/: test_sysctl.py  test_tconv.py
