[metadata]
name = prdanlz
version = 0.2.0
author = Yoshihiro Ota
author_email = ota@j.email.ne.jp
description = A system monitoring and action triggering tool
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: BSD :: FreeBSD
    Programming Language :: Python :: 3
    Topic :: System :: Monitoring
    Topic :: System :: Systems Administration
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    prdanlz = prdanlz.__main__:main
